<resources>
    <string name="app_name">Practice</string>
    <string name="large_app_name">GitHub Subscriber App</string>
    <string name="subscriberlist_progress_dialog">Getting users, please wait</string>
    <string name="accept_text">Accept</string>
    <string name="net_error_message">Couldn\'t get information from the server, please try later.</string>
    <string name="subscriberdetails_progress_dialog">Getting subscriber details, please wait</string>
    <string name="subscriber_details_item_txt_title">Repository:</string>
    <string name="subscriber_details_company_txt">Company: %s</string>
    <string name="subscriber_details_followers">Followers: %d</string>
    <string name="subscriber_details_following">Following: %d</string>
    <string name="subscriber_details_publicrepos">Repositories: %d</string>
    <string name="subscriber_details_location">Location: %s</string>
    <string name="subscriber_details_profile_layout_tag">profileLayout</string>
    <string name="subscriber_detail_type_profile">Profile</string>
    <string name="subscriber_detail_type_repository">Repository</string>
    <string name="web_client_progress_dialog_message">Getting %s, please wait</string>
</resources>
